# snip-mcp

./: LICENSE  README.md  pyproject.toml
.claude/skills/snips/: SKILL.md
src/snip_mcp/: __init__.py  capture.py  config.py  listener.py  server.py  store.py
